# movie-recommendation-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: generate_users.py  get_data.py
recommender/: embeddings.py  recommender.py
recommender/cleora/: cleora.py  graph_creation.py
src/: create_db.py  main.py  postgresql.sql  server.py
src/controller/: main.py  movies.py  ratings.py  recommendations.py  users.py
src/model/: tables.py  utils.py
src/view/: add_rating.html  login.html  main.html  main.py  movie.html  ratings.html  recommendations.html  register.html  search_results.html  user_me.html
