[tool.poetry]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Recommendation System project for LLM course"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
kagglehub = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
