[tool.poetry]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Recommendation System project for LLM course"
authors = ["Your Name <you@example.com>"]
packages = [{include = "recommender"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
transformers = "^4.48.1"
sqlalchemy = "^2.0.37"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.5"
kagglehub = "^0.3.7"
python-multipart = "^0.0.20"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
black = "^25.1.0"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
